--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     --light: #fff;
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     --cool: rgb(92, 97, 105);
+    --white: #fff;
 }
 
 /* CORE STYLING */
@@ -14,7 +15,7 @@
 }
 
 body {
-    background: #fff;
+    background: var(--white);
 }
 
 .container {
