--- a/css/style.css
+++ b/css/style.css
@@ -1,164 +1,719 @@
 /* VARIABLES */
 :root {
-    --primary: #ddd;
-    --dark: #333;
-    --light: #fff;
-    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-    --cool: rgb(92, 97, 105);
-    --white: #fff;
+  --primary-color: #77a0ee;
+  --secondary-color: #111c44;
+  --white: #fff;
+  --grey-color: #8d949f;
+  --grey-color-2: #acadb3;
+  --hover-color: #0776f5;
+  --buttons-hover: #1e64b3;
+  --off-white: #f4f8ff;
+  --start-color: #fafafc;
+  --dark: #333;
+  --light: #fff;
+  --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  --cool: rgb(92, 97, 105);
 }
 
 /* CORE STYLING */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background: var(--white);
+  background: var(--white);
 }
 
 .container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .box-shadow-down {
-    -webkit-box-shadow: 0px 17px 40px -10px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 17px 40px -10px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 17px 40px -10px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 17px 40px -10px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 17px 40px -10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 17px 40px -10px rgba(0, 0, 0, 0.3);
 }
 
 .box-shadow-up {
-    -webkit-box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
-    -moz-box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
-    box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
+  -webkit-box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
+  -moz-box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
+  box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
 }
 
 .icon-shadow-green {
-    -webkit-box-shadow: -1px 6px 5px 0px rgba(197, 252, 241, 1);
-    -moz-box-shadow: -1px 6px 5px 0px rgba(197, 252, 241, 1);
-    box-shadow: -1px 6px 5px 0px rgba(197, 252, 241, 1);
+  -webkit-box-shadow: -1px 6px 5px 0px rgba(197, 252, 241, 1);
+  -moz-box-shadow: -1px 6px 5px 0px rgba(197, 252, 241, 1);
+  box-shadow: -1px 6px 5px 0px rgba(197, 252, 241, 1);
 }
 
 .icon-shadow-blue {
-    -webkit-box-shadow: -1px 6px 5px 0px rgba(99, 171, 235, 0.45);
-    -moz-box-shadow: -1px 6px 5px 0px rgba(99, 171, 235, 0.45);
-    box-shadow: -1px 6px 5px 0px rgba(99, 171, 235, 0.45);
+  -webkit-box-shadow: -1px 6px 5px 0px rgba(99, 171, 235, 0.45);
+  -moz-box-shadow: -1px 6px 5px 0px rgba(99, 171, 235, 0.45);
+  box-shadow: -1px 6px 5px 0px rgba(99, 171, 235, 0.45);
 }
 
 .icon-shadow-yellow {
-    -webkit-box-shadow: -1px 6px 5px -1px rgba(250, 247, 180, 1);
-    -moz-box-shadow: -1px 6px 5px -1px rgba(250, 247, 180, 1);
-    box-shadow: -1px 6px 5px -1px rgba(250, 247, 180, 1);
+  -webkit-box-shadow: -1px 6px 5px -1px rgba(250, 247, 180, 1);
+  -moz-box-shadow: -1px 6px 5px -1px rgba(250, 247, 180, 1);
+  box-shadow: -1px 6px 5px -1px rgba(250, 247, 180, 1);
 }
-
 
 /* HEADER /////////////////////////////////////////////////////////////////////////////////*/
 #header {
-    padding: 20px 0;
-    /* position: fixed; */
+  padding: 20px 0;
+  /* position: fixed; */
 }
 
 .topnav {
-    overflow: hidden;
-    padding: 0 0;
+  overflow: hidden;
+  padding: 0 0;
 }
 
 .topnav:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .topnav a {
-    float: right;
-    display: block;
-    color: #111c44;
-    /* text-align: center; */
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 700;
+  float: right;
+  display: block;
+  color: var(--secondary-color);
+  /* text-align: center; */
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .topnav a:hover {
-    /* background-color: #ddd; */
-    /* color: black; */
-    color: #0776f5;
+  /* background-color: #ddd; */
+  /* color: black; */
+  color: var(--hover-color);
 }
 
 .topnav a.on-point {
-    color: white;
-    float: left;
-    font-size: 25px;
-    font-weight: 800;
-    padding: 12px 0 0;
+  color: var(--white);
+  float: left;
+  font-size: 25px;
+  font-weight: 800;
+  padding: 12px 0 0;
 }
 
 .topnav a.joining {
-    color: #77a0ee;
-    /* color: #111C44; */
-    padding: 15px 40px;
-    background: #f4f8ff;
-    border-radius: 50px;
-    font-size: 16px;
-    text-align: left;
+  color: var(--primary-color);
+  /* color: #111C44; */
+  padding: 15px 40px;
+  background: #f4f8ff;
+  border-radius: 50px;
+  font-size: 16px;
+  text-align: left;
 }
 
 .topnav a.joining:hover {
-    color: #0776f5;
+  color: var(--hover-color);
 }
 
 .topnav a.on-point .blue {
-    color: #77a0ee;
+  color: var(--primary-color);
 }
 
 .topnav a.on-point .grey {
-    color: #8d949f;
+  color: var(--grey-color);
 }
 
 .topnav .icon {
-    display: none;
+  display: none;
 }
 
+/* GET STARTED * ///////////////////////////////////////////////////////////////////////////////////////////// */
+#start .bg-color {
+  background: var(--start-color);
+  padding: 48px;
+}
+
+#start .bg-color .car-cover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
+  min-height: 700px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
+  /* width: 100%; */
+  /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+}
+
+#start .bg-color .car-cover .top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 480px;
+}
+
+#start .bg-color .car-cover .bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+#start .bg-color .car-cover h3 {
+  font-size: 50px;
+  line-height: 4rem;
+  color: var(--secondary-color);
+  /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+}
+
+#start .bg-color .car-cover p {
+  font-size: 17px;
+  /* margin: 90px 0; */
+  color: var(--grey-color-2);
+  /* z-index: 9; */
+  padding-top: 30px;
+}
+
+#start .bg-color .car-cover .phone-area {
+  display: inline-block;
+  background: var(--white);
+  /* border-radius: 7px; */
+  border-radius: 50px;
+  padding: 10px;
+}
+
+#start .bg-color .car-cover .phone-area input[type="tel"] {
+  padding: 10px 0 10px 10px;
+  width: 270px;
+  font-size: 17px;
+  border: none;
+  opacity: 0.3;
+}
+
+#start .bg-color .car-cover .phone-area button {
+  background: var(--primary-color);
+  color: var(--white);
+  font-size: 17px;
+  border-radius: 50px;
+  padding: 20px 30px;
+}
+
+#start .bg-color .car-cover .phone-area button:hover {
+  background: var(--hover-color);
+}
+
+/* #start .bg-color .car-cover .cover-text {
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left: 30%;
+  } */
+
+/* TEXT////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+/* TOP SECTION */
+#text {
+  background: var(--off-white);
+}
+
+#text .details {
+  padding: 150px 0;
+}
+
+#text .details .top-section {
+  /* text-align: center; */
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#text .details .top-section .green-line {
+  height: 3px;
+  width: 50px;
+  background: var(--primary-color);
+  border-radius: 50px;
+  margin: 0 auto;
+  font-weight: 800;
+}
+
+#text .details .top-section h3 {
+  margin: 50px 0;
+  color: var(--secondary-color);
+  font-size: 27px;
+  text-align: center;
+}
+
+#text .details .top-section p {
+  font-size: 17px;
+  color: var(--grey-color-2);
+  line-height: 1.8rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+/* BOTTOM SECTION */
+
+/* #text .details .bottom-section .column {
+  width: 25%;
+  display: inline-block;
+  float: left;
+  text-align: center;
+} */
+
+#text .details .bottom-section {
+  display: grid;
+  grid-gap: 20px;
+  text-align: center;
+  grid-template-areas: "text-box-a text-box-b text-box-c text-box-d";
+}
+.text-box-a {
+  grid-area: text-box-a;
+}
+.text-box-b {
+  grid-area: text-box-b;
+}
+.text-box-c {
+  grid-area: text-box-c;
+}
+.text-box-d {
+  grid-area: text-box-d;
+}
+
+#text .details .column {
+  text-align: center;
+}
+
+#text .details .bottom-section .column:nth-child(1) {
+  padding: 0;
+}
+
+#text .details .bottom-section .column:nth-child(2) {
+  padding: 60px 0 0;
+}
+
+#text .details .bottom-section .column:nth-child(3) {
+  padding: 0;
+}
+
+#text .details .bottom-section .column:nth-child(4) {
+  padding: 60px 0 0;
+}
+
+#text .details .bottom-section .column .fas {
+  /* font-size: 35px; */
+  color: var(--primary-color);
+  /* color: #a0b5dd; */
+  background: #fff;
+  border-radius: 50px;
+  border: 12px solid var(--white);
+}
+#text .details .bottom-section .column .fas:hover {
+  /* background: var(--cool); */
+  color: var(--buttons-hover);
+}
+
+#text .details .bottom-section .column h3 {
+  padding: 24px 0;
+  color: var(--secondary-color);
+  font-size: 18px;
+}
+
+#text .details .bottom-section .column p {
+  font-size: 17px;
+  font-weight: 500;
+  color: var(--grey-color-2);
+  line-height: 1.8rem;
+  padding: 0 0 20px;
+}
+
+#text .details .bottom-section .column .grey-line {
+  height: 2px;
+  width: 250px;
+  background: var(--grey-color-2);
+  opacity: 0.1;
+  margin: 0 auto;
+}
 
 /* MEDIA QUERIES //////////////////////////////////////////////////////////////////////////////////////////////////// */
 @media screen and (max-width: 992px) {
-    .topnav a:not(:first-child) {
-        display: none;
-    }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
 
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 
-    .topnav a.joining {
-        color: #77a0ee;
-        padding: 14px 16px;
-        background: none;
-        border-radius: none;
-        font-size: 16px;
-    }
+  .topnav a.joining {
+    color: var(--hover-color);
+    padding: 14px 16px;
+    background: none;
+    border-radius: none;
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 992px) {
-    .topnav.responsive {
-        position: relative;
-    }
+  .topnav.responsive {
+    position: relative;
+  }
 
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 4px;
-        bottom: 230px;
-    }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 4px;
+    bottom: 230px;
+  }
 
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  #start .bg-color .car-cover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
+    min-height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    /* width: 100%; */
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover .top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 400px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #start .bg-color .car-cover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
+    min-height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    /* width: 100%; */
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover .top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 300px;
+  }
+
+  #start .bg-color .car-cover h3 {
+    font-size: 35px;
+    line-height: 4rem;
+    color: var(--secondary-color);
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover p {
+    font-size: 17px;
+    /* margin: 90px 0; */
+    color: var(--grey-color-2);
+    /* z-index: 9; */
+    padding-top: 1px;
+    display: none;
+  }
+
+  #start .bg-color .car-cover .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  #start .bg-color .car-cover .phone-area {
+    display: inline-block;
+    background: var(--white);
+    /* border-radius: 7px; */
+    border-radius: 50px;
+    padding: 5px;
+  }
+
+  #start .bg-color .car-cover .phone-area input[type="tel"] {
+    padding: 5px 0 5px 5px;
+    width: 170px;
+    font-size: 15px;
+    border: none;
+    opacity: 0.3;
+  }
+
+  #start .bg-color .car-cover .phone-area button {
+    background: var(--primary-color);
+    color: var(--white);
+    font-size: 15px;
+    border-radius: 50px;
+    padding: 15px 25px;
+  }
+}
+
+@media screen and (max-width: 508px) {
+  #start .bg-color .car-cover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
+    min-height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    /* width: 100%; */
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover .top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 250px;
+  }
+
+  #start .bg-color .car-cover h3 {
+    font-size: 25px;
+    line-height: 3rem;
+    color: var(--secondary-color);
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover p {
+    font-size: 17px;
+    /* margin: 90px 0; */
+    color: var(--grey-color-2);
+    /* z-index: 9; */
+    padding-top: 1px;
+    display: none;
+  }
+
+  #start .bg-color .car-cover .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  #start .bg-color .car-cover .phone-area {
+    display: inline-block;
+    background: var(--white);
+    /* border-radius: 7px; */
+    border-radius: 50px;
+    padding: 2px;
+  }
+
+  #start .bg-color .car-cover .phone-area input[type="tel"] {
+    padding: 5px 0 5px 5px;
+    width: 150px;
+    font-size: 12px;
+    border: none;
+    opacity: 0.3;
+  }
+
+  #start .bg-color .car-cover .phone-area button {
+    background: var(--primary-color);
+    color: var(--white);
+    font-size: 12px;
+    border-radius: 50px;
+    padding: 10px 8px;
+  }
+}
+
+@media screen and (max-width: 401px) {
+  #start .bg-color .car-cover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+      url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
+    min-height: 250px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    /* width: 100%; */
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover .top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 150px;
+  }
+
+  #start .bg-color .car-cover h3 {
+    font-size: 12px;
+    line-height: 2rem;
+    color: var(--secondary-color);
+    /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+  }
+
+  #start .bg-color .car-cover p {
+    font-size: 17px;
+    /* margin: 90px 0; */
+    color: var(--grey-color-2);
+    /* z-index: 9; */
+    padding-top: 1px;
+    display: none;
+  }
+
+  #start .bg-color .car-cover .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  #start .bg-color .car-cover .phone-area {
+    display: inline-block;
+    background: var(--white);
+    /* border-radius: 7px; */
+    border-radius: 50px;
+    padding: 1px;
+  }
+
+  #start .bg-color .car-cover .phone-area input[type="tel"] {
+    padding: 5px 0 5px 5px;
+    width: 70px;
+    font-size: 7px;
+    border: none;
+    /* opacity: 0.3; */
+  }
+
+  #start .bg-color .car-cover .phone-area button {
+    background: var(--primary-color);
+    color: var(--white);
+    font-size: 7px;
+    border-radius: 50px;
+    padding: 8px 6px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  /* TEXT ///////////////////////////////////////////////////////////////////*/
+
+  #text .details .bottom-section {
+    display: grid;
+    grid-gap: 20px;
+    text-align: center;
+    grid-template-areas:
+      "text-box-a text-box-b "
+      "text-box-c text-box-d";
+  }
+  .text-box-a {
+    grid-area: text-box-a;
+  }
+  .text-box-b {
+    grid-area: text-box-b;
+  }
+  .text-box-c {
+    grid-area: text-box-c;
+  }
+  .text-box-d {
+    grid-area: text-box-d;
+  }
+
+  #text .details .bottom-section .column:nth-child(1) {
+    padding: 0;
+  }
+
+  #text .details .bottom-section .column:nth-child(2) {
+    padding: 0;
+  }
+
+  #text .details .bottom-section .column:nth-child(3) {
+    padding: 0;
+  }
+
+  #text .details .bottom-section .column:nth-child(4) {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 545px) {
+  /* TEXT ///////////////////////////////////////////////////////////////////*/
+
+  #text .details .bottom-section {
+    display: grid;
+    grid-gap: 20px;
+    text-align: center;
+    grid-template-areas:
+      "text-box-a"
+      "text-box-b"
+      "text-box-c"
+      "text-box-d";
+  }
+  .text-box-a {
+    grid-area: text-box-a;
+  }
+  .text-box-b {
+    grid-area: text-box-b;
+  }
+  .text-box-c {
+    grid-area: text-box-c;
+  }
+  .text-box-d {
+    grid-area: text-box-d;
+  }
+
+  #text .details .bottom-section .column:nth-child(1) {
+    padding: 0;
+  }
+
+  #text .details .bottom-section .column:nth-child(2) {
+    padding: 0;
+  }
+
+  #text .details .bottom-section .column:nth-child(3) {
+    padding: 0;
+  }
+
+  #text .details .bottom-section .column:nth-child(4) {
+    padding: 0;
+  }
 }
