FINAL PROJECT, deleted some unuseful comments, linked the menus to sections within  the site

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* VARIABLES */
+/* VARIABLES //////////////////////////////////////////////////////////////////////////////*/
 :root {
     --primary-color: #77a0ee;
     --secondary-color: #111c44;
@@ -20,7 +20,7 @@
     --cool: rgb(92, 97, 105);
 }
 
-/* CORE STYLING */
+/* CORE STYLING ////////////////////////////////////////////////////////////////////////////*/
 
 * {
     box-sizing: border-box;
@@ -70,7 +70,6 @@ body {
     -webkit-box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
     -moz-box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
     box-shadow: 0px -1px 5px 1px rgba(161, 159, 161, 1);
-    /* margin: 0 0 50px 0; */
 }
 
 .car-shadow-down {
@@ -82,7 +81,6 @@ body {
 /* HEADER /////////////////////////////////////////////////////////////////////////////////*/
 #header {
     padding: 20px 0;
-    /* position: fixed; */
 }
 
 .topnav {
@@ -100,7 +98,6 @@ body {
     float: right;
     display: block;
     color: var(--secondary-color);
-    /* text-align: center; */
     padding: 14px 16px;
     text-decoration: none;
     font-size: 16px;
@@ -108,8 +105,6 @@ body {
 }
 
 .topnav a:hover {
-    /* background-color: #ddd; */
-    /* color: black; */
     color: var(--hover-color);
 }
 
@@ -123,7 +118,6 @@ body {
 
 .topnav a.joining {
     color: var(--primary-color);
-    /* color: #111C44; */
     padding: 15px 40px;
     background: #f4f8ff;
     border-radius: 50px;
@@ -161,11 +155,6 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
-    /* width: 100%; */
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
 }
 
 #start .bg-color .car-cover .top {
@@ -187,24 +176,17 @@ body {
     font-size: 50px;
     line-height: 4rem;
     color: var(--secondary-color);
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
 }
 
 #start .bg-color .car-cover p {
     font-size: 17px;
-    /* margin: 90px 0; */
     color: var(--grey-color-2);
-    /* z-index: 9; */
     padding-top: 30px;
 }
 
 #start .bg-color .car-cover .phone-area {
     display: inline-block;
     background: var(--white);
-    /* border-radius: 7px; */
     border-radius: 50px;
     padding: 10px;
 }
@@ -229,13 +211,6 @@ body {
     background: var(--hover-color);
 }
 
-/* #start .bg-color .car-cover .cover-text {
-    text-align: center;
-    position: absolute;
-    top: 20%;
-    left: 30%;
-  } */
-
 /* TEXT////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 /* TOP SECTION */
@@ -248,7 +223,6 @@ body {
 }
 
 #text .details .top-section {
-    /* text-align: center; */
     margin-bottom: 100px;
     display: flex;
     flex-direction: column;
@@ -281,14 +255,9 @@ body {
     text-align: center;
 }
 
-/* BOTTOM SECTION */
+/* BOTTOM SECTION /////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
-/* #text .details .bottom-section .column {
-  width: 25%;
-  display: inline-block;
-  float: left;
-  text-align: center;
-} */
+
 
 #text .details .bottom-section {
     display: grid;
@@ -334,16 +303,13 @@ body {
 }
 
 #text .details .bottom-section .column .fas {
-    /* font-size: 35px; */
     color: var(--primary-color);
-    /* color: #a0b5dd; */
     background: var(--white);
     border-radius: 50px;
     border: 12px solid var(--white);
 }
 
 #text .details .bottom-section .column .fas:hover {
-    /* background: var(--cool); */
     color: var(--buttons-hover);
 }
 
@@ -370,39 +336,6 @@ body {
 }
 
 /* RESTRICTIONS  ///////////////////////////////////////////////////////////////////////////////////////////////////// */
-/* #restrictions {
-    position: relative;
-    top: -100px;
-}
-
-#restrictions .info {
-    background: var(--white);
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    padding: 60px 40px;
-}
-
-#restrictions .column {
-    background: var(--grey-color);
-}
-
-#restrictions .column .side {
-    display: inline-block;
-    padding: 0 20px 20px 20px;
-}
-
-#restrictions .column .inline {
-    display: inline-block;
-}
-
-#restrictions .info .column .icon {
-    display: inline-block;
-    height: 35px;
-    width: 35px;
-    background: #23c296;
-    border-radius: 50px;
-} */
 
 #restrictions {
     position: relative;
@@ -622,8 +555,6 @@ body {
 #cars .contain .left-side {
     grid-area: left-side;
     background: var(--primary-color);
-    /* height: 700px; */
-    /* width: 1000px; */
     justify-items: center;
     align-items: center;
     text-align: center;
@@ -707,18 +638,14 @@ body {
 .box-a {
     grid-area: box-a;
     background: var(--white);
-    /* justify-items: center;
-  align-items: center; */
     text-align: center;
     height: 350px;
-    /* width: 332.09px; */
 }
 
 .box-b {
     grid-area: box-b;
     background: var(--white);
     text-align: center;
-    /* width: 332.09px; */
     height: 350px;
 }
 
@@ -726,7 +653,6 @@ body {
     grid-area: box-c;
     background: var(--white);
     text-align: center;
-    /* width: 332.09px; */
     height: 350px;
 }
 
@@ -735,7 +661,6 @@ body {
     background: var(--white);
     text-align: center;
     height: 350px;
-    /* width: 332.09px; */
 }
 
 .right-side {
@@ -851,7 +776,6 @@ body {
 }
 
 #customer ul li .box h2 {
-    /* padding-top: 35px; */
     padding-bottom: 35px;
 }
 
@@ -898,8 +822,6 @@ body {
     line-height: 1.8rem;
     margin-bottom: 20px;
 }
-
-#customer ul li .box .click {}
 
 #customer ul li .box .click a {
     display: block;
@@ -952,14 +874,12 @@ body {
 }
 
 #footer .top h3 {
-    display: inline-block;
     float: left;
     font-size: 27px;
     line-height: 1.3;
 }
 
 #footer .top a {
-    display: inline-block;
     float: right;
     background: var(--primary-color);
     border-radius: 50px;
@@ -1035,7 +955,6 @@ body {
 
 #footer .down .social {
     float: left;
-    display: inline-block;
     margin-bottom: 100px;
 }
 
@@ -1067,7 +986,6 @@ body {
 
 #footer .down .copyright {
     float: right;
-    display: inline-block;
     position: relative;
     top: 10px;
     font-size: 14px;
@@ -1435,18 +1353,14 @@ body {
     .box-a {
         grid-area: box-a;
         background: var(--white);
-        /* justify-items: center;
-        align-items: center; */
         text-align: center;
         height: 350px;
-        /* width: 332.09px; */
     }
 
     .box-b {
         grid-area: box-b;
         background: var(--white);
         text-align: center;
-        /* width: 332.09px; */
         height: 350px;
     }
 
@@ -1454,7 +1368,6 @@ body {
         grid-area: box-c;
         background: var(--white);
         text-align: center;
-        /* width: 332.09px; */
         height: 350px;
     }
 
@@ -1463,7 +1376,6 @@ body {
         background: var(--white);
         text-align: center;
         height: 350px;
-        /* width: 332.09px; */
     }
 
     .right-side {
@@ -1522,11 +1434,6 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         position: relative;
-        /* width: 100%; */
-        /* display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; */
     }
 
     #start .bg-color .car-cover .top {
@@ -1548,8 +1455,6 @@ body {
 
     #cars .contain {
         display: grid;
-        /* grid-gap: 100px; */
-
         grid-template-areas:
             "left-side "
             "right-side";
@@ -1558,8 +1463,6 @@ body {
     #cars .contain .left-side {
         grid-area: left-side;
         background: var(--primary-color);
-        /* height: 700px; */
-        /* width: 1000px; */
         justify-items: center;
         align-items: center;
         text-align: center;
@@ -1635,7 +1538,6 @@ body {
             "box-c box-d";
         align-items: center;
         justify-items: center;
-        /* padding: 0 100px; */
         margin-top: -42px;
         margin-bottom: -42px;
     }
@@ -1643,18 +1545,14 @@ body {
     .box-a {
         grid-area: box-a;
         background: var(--white);
-        /* justify-items: center;
-        align-items: center; */
         text-align: center;
         height: 300px;
-        /* width: 332.09px; */
     }
 
     .box-b {
         grid-area: box-b;
         background: var(--white);
         text-align: center;
-        /* width: 332.09px; */
         height: 300px;
     }
 
@@ -1662,7 +1560,6 @@ body {
         grid-area: box-c;
         background: var(--white);
         text-align: center;
-        /* width: 332.09px; */
         height: 300px;
     }
 
@@ -1671,7 +1568,6 @@ body {
         background: var(--white);
         text-align: center;
         height: 300px;
-        /* width: 332.09px; */
     }
 
     .right-side {
@@ -1722,10 +1618,9 @@ body {
 
 }
 
-/* @media(min-width: 767px) */
 @media(min-width: 778px) {
 
-    /* HAPPY-CUSTOMER , TOP BOXES////////////////////////////////////////////*/
+    /* HAPPY-CUSTOMER , TOP BOXES////////////////////////////////////////////////////////////////////*/
     #customer .top-section {
         text-align: center;
         padding: 0 0 200px;
@@ -1741,18 +1636,6 @@ body {
         border-top: 2px solid var(--primary-color);
         border-radius: 4px;
         margin-top: -69px;
-    }
-
-    #customer ul li:nth-child(2) .box h2 {
-        /* padding-top: 80px; */
-        /* padding-bottom: 80px; */
-        /* display: none; */
-        /* margin-bottom: 80px; */
-
-    }
-
-    #customer ul li:nth-child(2) .box {
-        /* padding: 80px 25px 25px; */
     }
 
     #customer li {
@@ -1784,7 +1667,6 @@ body {
     }
 
     #customer ul li .box h2 {
-        /* padding-top: 35px; */
         padding-bottom: 45px;
     }
 
@@ -1853,17 +1735,6 @@ body {
         padding-left: 70px;
     }
 
-    /* #delivery .options .column .icon-2 {
-          display: inline-block;
-          height: 35px;
-          width: 35px;
-          background: #23c296;
-          border-radius: 50px;
-          position: absolute;
-          top: 30px;
-          left: -50px;
-      } */
-
     #delivery .options .column:nth-child(2) .icon-2 {
         display: inline-block;
         height: 35px;
@@ -1898,7 +1769,6 @@ body {
     }
 
     #cars .contain .left-side {
-        /* background: none; */
         background: var(--primary-color);
     }
 
@@ -1958,9 +1828,6 @@ body {
             "box-d";
         align-items: center;
         justify-items: center;
-        /* margin-top: -42px;
-    margin-bottom: -42px; */
-        /* margin: 0; */
         padding: 0;
     }
 
@@ -2052,11 +1919,6 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         position: relative;
-        /* width: 100%; */
-        /* display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; */
     }
 
     #start .bg-color .car-cover .top {
@@ -2071,17 +1933,11 @@ body {
         font-size: 35px;
         line-height: 4rem;
         color: var(--secondary-color);
-        /* display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; */
     }
 
     #start .bg-color .car-cover p {
         font-size: 17px;
-        /* margin: 90px 0; */
         color: var(--grey-color-2);
-        /* z-index: 9; */
         padding-top: 1px;
         display: none;
     }
@@ -2096,7 +1952,6 @@ body {
     #start .bg-color .car-cover .phone-area {
         display: inline-block;
         background: var(--white);
-        /* border-radius: 7px; */
         border-radius: 50px;
         padding: 5px;
     }
@@ -2201,7 +2056,6 @@ body {
         padding-top: 0;
         position: relative;
         top: -48px;
-        /* left: 165px; */
         text-align: center;
     }
 
@@ -2292,11 +2146,6 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         position: relative;
-        /* width: 100%; */
-        /* display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center; */
     }
 
     #start .bg-color .car-cover .top {
@@ -2311,17 +2160,11 @@ body {
         font-size: 25px;
         line-height: 3rem;
         color: var(--secondary-color);
-        /* display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center; */
     }
 
     #start .bg-color .car-cover p {
         font-size: 17px;
-        /* margin: 90px 0; */
         color: var(--grey-color-2);
-        /* z-index: 9; */
         padding-top: 1px;
         display: none;
     }
@@ -2336,7 +2179,6 @@ body {
     #start .bg-color .car-cover .phone-area {
         display: inline-block;
         background: var(--white);
-        /* border-radius: 7px; */
         border-radius: 50px;
         padding: 2px;
     }
@@ -2398,7 +2240,6 @@ body {
         color: var(--white);
         font-size: 17px;
         font-weight: 500;
-        /* width: 100%; */
     }
 
     #cars .contain .right-side a:hover {
@@ -2417,11 +2258,6 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         position: relative;
-        /* width: 100%; */
-        /* display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; */
     }
 
     #start .bg-color .car-cover .top {
@@ -2436,17 +2272,11 @@ body {
         font-size: 12px;
         line-height: 2rem;
         color: var(--secondary-color);
-        /* display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; */
     }
 
     #start .bg-color .car-cover p {
         font-size: 17px;
-        /* margin: 90px 0; */
         color: var(--grey-color-2);
-        /* z-index: 9; */
         padding-top: 1px;
         display: none;
     }
@@ -2461,7 +2291,6 @@ body {
     #start .bg-color .car-cover .phone-area {
         display: inline-block;
         background: var(--white);
-        /* border-radius: 7px; */
         border-radius: 50px;
         padding: 1px;
     }
@@ -2471,7 +2300,6 @@ body {
         width: 70px;
         font-size: 7px;
         border: none;
-        /* opacity: 0.3; */
     }
 
     #start .bg-color .car-cover .phone-area button {
