--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,9 @@ body {
 
 #start .bg-color .car-cover {
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-        url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
+        url("https://i.postimg.cc/KvQNLTqn/bg-cover.png");
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+        url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png"); */
     min-height: 700px;
     background-position: center;
     background-repeat: no-repeat;
