--- a/css/style.css
+++ b/css/style.css
@@ -149,14 +149,13 @@ body {
 
 #start .bg-color .car-cover {
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-        url("https://i.postimg.cc/KvQNLTqn/bg-cover.png");
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-        url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png"); */
+        url("/img/bg_cover.png");
     min-height: 700px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
+    /* https://i.postimg.cc/KvQNLTqn/bg-cover.png */
 }
 
 #start .bg-color .car-cover .top {
@@ -1429,8 +1428,6 @@ body {
 
     /* GET STARTED * ///////////////////////////////////////////////////////////////////////////////////////////// */
     #start .bg-color .car-cover {
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-            url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
         min-height: 400px;
         background-position: center;
         background-repeat: no-repeat;
@@ -1903,8 +1900,6 @@ body {
 
     /* GET STARTED * ///////////////////////////////////////////////////////////////////////////////////////////// */
     #start .bg-color .car-cover {
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-            url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
         min-height: 400px;
         background-position: center;
         background-repeat: no-repeat;
@@ -2130,8 +2125,6 @@ body {
 
     /* GET STARTED * ///////////////////////////////////////////////////////////////////////////////////////////// */
     #start .bg-color .car-cover {
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-            url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
         min-height: 400px;
         background-position: center;
         background-repeat: no-repeat;
@@ -2242,8 +2235,6 @@ body {
 
     /* GET STARTED * ///////////////////////////////////////////////////////////////////////////////////////////// */
     #start .bg-color .car-cover {
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-            url("https://www.amanahprestige.com/assets/img/cars/man-bmw.png");
         min-height: 250px;
         background-position: center;
         background-repeat: no-repeat;
