got rid of button outline

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,10 @@ body {
     background: var(--hover-color);
 }
 
+#start .bg-color .car-cover .phone-area button:focus {
+    outline: none;
+}
+
 /* TEXT////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 /* TOP SECTION */
