--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,10 @@ body {
     background: var(--hover-color);
 }
 
+#start .bg-color .car-cover .phone-area button:focus {
+    outline: none;
+}
+
 /* TEXT////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 /* TOP SECTION */
